package edu.uoc.epcsd.course.domain;

public enum CourseStatus {

	DRAFT,
	ENROLLMENT_OPEN,
	ACTIVE,
	PENDING_CLOSUE,
	CLOSED;

}
